[2025.09.21] update script.